task5/deploy/game-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gameservice
  name: gameservice
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameservice
  template:
    metadata:
      labels:
        app: gameservice
    spec:
      containers:
        - image: gm-gameservice:v1
          name: gameservice
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
