task5/deploy/game-service/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gameservice
  name: gameservice
  namespace: default
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: gameservice
  type: ClusterIP
