task5/deploy/game-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gameservice-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gameservice
                port:
                  number: 8081
